--- a/index-en.html
+++ b/index-en.html
@@ -6,9 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Gerador Frases</title>
 
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div id="res"></div>
+	<div id="res-pai">
+		<div id="res"></div>
+	</div>
 
 	<script src="index-en.js"></script>
 </body>
